@@ -60,8 +60,8 @@ void MapLocus(MapType *map,float *v,int *a,int *b,int *c);
 int *MapLocusEStart(MapType *map,float *v);
 int MapExclLocus(MapType *map,float *v,int *a,int *b,int *c);
 
-#define MapCache(m,a) {m->Cache[a]=1;m->CacheLink[a]=m->CacheStart;m->CacheStart=a;}
-#define MapCached(m,a) (m->Cache[a])
+#define MapCache(m,a) {(m)->Cache[a]=1;(m)->CacheLink[a]=(m)->CacheStart;(m)->CacheStart=a;}
+#define MapCached(m,a) ((m)->Cache[a])
 
 void MapCacheInit(MapCache *M,MapType *I,int group_id,int block_base);
 void MapCacheReset(MapCache *M);
